# docs/swagger.yaml
@@ -207,8 +207,14 @@ definitions:
     type: object
   inputs.GetAnswersInput:
     properties:
+      limit:
+        type: integer
+      offset:
+        type: integer
       product_id:
         type: integer
+    required:
+    - limit
     type: object
   inputs.LoginUserInput:
     properties:
@@ -446,6 +452,15 @@ definitions:
     - Temporary
     - Default
     - Admin
+  outputs.CommentsOutput:
+    properties:
+      comments:
+        items:
+          $ref: '#/definitions/models.Comment'
+        type: array
+      total_comments_count:
+        type: integer
+    type: object
   outputs.GetProductsResult:
     properties:
       amount:
@@ -763,9 +778,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/models.Comment'
-            type: array
+            $ref: '#/definitions/outputs.CommentsOutput'
         "400":
           description: Bad Request
           schema:
@@ -788,15 +801,20 @@ paths:
         in: header
         name: Authorization
         type: string
+      - in: query
+        name: limit
+        required: true
+        type: integer
+      - in: query
+        name: offset
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/models.Comment'
-            type: array
+            $ref: '#/definitions/outputs.CommentsOutput'
         "400":
           description: Bad Request
           schema:
